Fix large amount of numbers overflowing the display

--- a/style.css
+++ b/style.css
@@ -31,9 +31,12 @@ body {
 }
 
 .result {
+    width: 330px;
+    text-align: right;
     align-self: end;
     margin: auto 23px auto 0;
     font-size: 36px;
+    overflow-x: auto;
 }
 
 button,
